--- a/Error-404/style.css
+++ b/Error-404/style.css
@@ -1,13 +1,8 @@
 
 #oopss {
-  background: linear-gradient(-45deg, #f1f1f1, #fafafa);
-  position: fixed;
-  left: 0px;
-  top: 0;
   width: 100%;
-  height: 100%;
-  line-height: 1.5em;
-  z-index: 9999;
+  height: auto;
+  z-index: 0;
 }
 #oopss #error-text {
   font-size: 40px;
@@ -34,7 +29,4 @@
   padding: 0 300px 0px;
   text-align: center;
   
-}
-#oopss #error-text p.p-b {
-  font-size: 15px;
 }
